Fixed title alignment
Fixed title alignment.

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
   padding: 0;
 }
 #randomuserwidget .media-body strong {
-  vertical-align: top;
+  vertical-align: middle;
   font-size: 15px;
   padding: 0;
   margin: 0;
